--- a/pipfile
+++ b/pipfile
@@ -11,6 +11,8 @@ pygments = "*"
 pyyaml = "*"
 django-filter = "*"
 pyjwt = "*"
+django-extensions = "*"
+django-allauth = "!=0.42.0"
 
 [dev-packages]
 
