--- a/pipfile
+++ b/pipfile
@@ -4,19 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-black = "*"
-djangorestframework = "*"
-pygments = "*"
-pyyaml = "*"
-django-filter = "*"
-pyjwt = "*"
-django-extensions = "*"
-django-allauth = "!=0.42.0"
-pillow = "*"
-requests = 2.28.1
+django = "4.2.1"
+djangorestframework = "3.14.0"
+
 
 [dev-packages]
 
 [requires]
-python_version = '3.10'
+python_version = "3.11"
